todos-rest-api-with-auth/k8s-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webook-postgresql
    labels:
        app: webook-postgresql
spec:
    replicas: 1
    selector:
        matchLabels:
            app: webook-postgresql
    template:
        metadata:
            name: webook-postgresql
            labels:
                app: webook-postgresql
        spec:
            containers:
                -   name: webook-postgresql
                    image: postgres:16
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 5432
                            protocol: TCP
            restartPolicy: Always
